--- a/src/pages/Home/components/Title.css
+++ b/src/pages/Home/components/Title.css
@@ -1,13 +1,24 @@
 div {
-    margin-top: 23%;
-    margin-left: 1rem;
+    margin-top: 15%;
 }
 
-.titleDiv h1, .titleDiv p{
+.titleDiv h1 {
     color: #fff;
     display: flex;
+    justify-content: center;
     vertical-align: top;
-    text-align: left;
+    text-align: center;
+    font-size: 40px;
+}
+
+.titleDiv p {
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    vertical-align: top;
+    text-align: center; 
+    font-size: 23px;
+    /* font-weight: 600; */
 }
 
 p {
@@ -15,7 +26,16 @@ p {
 }
 
 .secondPar {
-    text-decoration: underline;
     text-decoration-thickness: .15rem;
     text-decoration-color: #713EDC;
+}
+
+.line-1 {
+    height: 3px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: auto;
+    background: linear-gradient(45deg, #a801ff, #0006ff);
+    max-width: 600px;
 }
