--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;800&display=swap');
 
 body {
-  background-color: #161C1C;
+  background-color: rgb(12, 11, 11);
   font-family: 'Mulish', sans-serif;
 }
 
