Removed animation currently and added Navbar.

--- a/src/components/MusicAnimation.css
+++ b/src/components/MusicAnimation.css
@@ -5,10 +5,9 @@
     align-content: center;
     align-items: flex-end;
     justify-content: left;
-    margin-top: -310px;
+    margin-top: -28%;
     margin-left: 20px;
 }
-
 
 .musicAnimation .stroke {
     display: block;
