--- a/src/pages/Home/components/Title.css
+++ b/src/pages/Home/components/Title.css
@@ -6,6 +6,7 @@
     color: #fff;
     display: flex;
     justify-content: center;
+    align-items: center;
     vertical-align: top;
     text-align: center;
     font-size: 40px;
