--- a/src/pages/Home/components/Title.css
+++ b/src/pages/Home/components/Title.css
@@ -2,7 +2,7 @@
     margin-top: 15%;
 } */
 
-.titleDiv h1 {
+/* .titleDiv h1 {
     color: #fff;
     display: flex;
     justify-content: center;
@@ -21,7 +21,7 @@
     text-align: center; 
     font-size: 23px;
     /* font-weight: 600; */
-}
+/* }
 
 p {
     line-height: 10px;
@@ -40,4 +40,4 @@ p {
     margin-top: auto;
     background: linear-gradient(45deg, #a801ff, #0006ff);
     max-width: 600px;
-}
+}  */
